# CryptoGuy

./: .gitignore  README.md
src/: CMakeLists.txt  cryptoguy.cpp  decrypter.cpp  decrypter.h  generate_algos.sh  util.cpp  util.h
src/decrypt_algos/: Atbash  Base64  Trivial
src/keyed_decrypt_algos/: Affine  Trivial_Keyed
